--- a/dorker.html
+++ b/dorker.html
@@ -56,6 +56,7 @@ function SearchDuckDuckGo() {
     <input type=button value="Search Google" onclick="SearchGoogle()">
     <input type=button value="Search DuckDuckgo" onclick="SearchDuckDuckGo()">
 </form>
+<p>NOTE: Your browser will prevent this page from opening more than one new tab at a time. You must allow popups for this page in order for this tool to work correclty.</p>
 <p>NOTE: This tool opens dozens of tabs at once. Your browser will most likely get flagged for suspicious activity for making automated requests. When this happens, complete a captcha, close all the tabs, and re-run the search. You should be good for an hour or so.</p>
 </body>
 
