--- a/dorker.html
+++ b/dorker.html
@@ -43,7 +43,7 @@ function SearchDuckDuckGo() {
 
     // Search DuckDuckGo for filetype only
     filetypes.forEach(filetype =>
-        window.open("https://duckduckgo.com/?q=site%3A+" + url + "+filetype%3A" + filetype + "%22&t=h_&ia=web")
+        window.open("https://duckduckgo.com/?q=site%3A+" + url + "+filetype%3A" + filetype + "&t=h_&ia=web")
         )    
 }
 
