--- a/dorker.html
+++ b/dorker.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Dorker</title>
     <!-- Begin CSS Styling -->
     <style>
         html {
@@ -54,7 +55,7 @@
             </tr>        
             <tr>
                 <td><p>File Types:</p></td>
-                <td><input type="text" id="fileTypesInput" value="pdf, doc, docx, xls, xlsx, ppt, pptx, db, cer, crt" size="50"></input></td>
+                <td><input type="text" id="fileTypesInput" value="pdf, doc, docx, xls, xlsx, ppt, pptx" size="50"></input></td>
             </tr>
         </table>
 
@@ -84,7 +85,8 @@
 
     <hr>
 
-    <p>INSTRUCTIONS: 
+    <h2>INSTRUCTIONS:</h3>
+    <p>
         <ol>
             <li>Enter a website, i.e. "yourdomain.com".</li>
             <li>Click a button.</li>
@@ -119,7 +121,7 @@
     <h3>File Extensions: Virtual Machines</h3>
     <p>vhd, vmdk, vmx, nvram, vmem, vmss, log, vmsd, vmsn, vmtm, vmxf, ova, ovf, vdi, vhd, qemu2, vbox</p>
   
-
+    <p>Disclaimer: This is an experimental tool. Use at your own risk.</p>
 
 </body>
 
@@ -196,3 +198,4 @@
 </script>
 
 </html>
+
