--- a/dorker.html
+++ b/dorker.html
@@ -51,11 +51,11 @@
             </tr>
             <tr>
                 <td><p>Search Terms:</p></td>
-                <td><input type="text" id="searchTermInput" value="ssn, password, passwords, first name, last name, confidential, session, backup" size="80"></input></td>
+                <td><input type="text" id="searchTermInput" value="ssn, password, passwords, confidential, classified, secret, session, backup, salary" size="80"></input></td>
             </tr>        
             <tr>
                 <td><p>File Types:</p></td>
-                <td><input type="text" id="fileTypesInput" value="pdf, doc, docx, xls, xlsx, ppt, pptx" size="50"></input></td>
+                <td><input type="text" id="fileTypesInput" value="pdf, doc, docx, xls, xlsx, ppt, pptx, log, txt" size="50"></input></td>
             </tr>
         </table>
 
@@ -198,4 +198,3 @@
 </script>
 
 </html>
-
