--- a/dorker.html
+++ b/dorker.html
@@ -51,7 +51,7 @@
             </tr>
             <tr>
                 <td><p>Search Terms:</p></td>
-                <td><input type="text" id="searchTermInput" value="ssn, password, passwords, confidential, classified, secret, session, backup, salary" size="80"></input></td>
+                <td><input type="text" id="searchTermInput" value="ssn, password, passwords, confidential, classified, secret, session, backup, salary, index of /" size="80"></input></td>
             </tr>        
             <tr>
                 <td><p>File Types:</p></td>
@@ -219,3 +219,4 @@
 </script>
 
 </html>
+
