Added "To Parent Directory"
Also added new "Search Terms: Exposed Directory Structures" section in the "Search suggestions" section

--- a/dorker.html
+++ b/dorker.html
@@ -55,7 +55,7 @@
             </tr>
             <tr>
                 <td><p>Search Terms:</p></td>
-                <td><input type="text" id="searchTermInput" value="ssn, password, passwords, confidential, classified, secret, session, backup, salary, index of /" size="80"></input></td>
+                <td><input type="text" id="searchTermInput" value="ssn, password, passwords, confidential, classified, secret, session, backup, salary, index of /, To Parent Directory" size="80"></input></td>
             </tr>        
             <tr>
                 <td><p>File Types:</p></td>
@@ -117,6 +117,9 @@
     
     <h3>Search Terms: PII</h3>
     <p>ssn, ss#, first name, last name, passport, dob</p>   
+
+    <h3>Search Terms: Exposed Directory Structures</h3>
+    <p>index of /, To Parent Directory</p>  
     
     <h3>File Extensions: General</h3>
     <p>pdf, doc, docx, xls, xlsx, ppt, pptx, log</p>
